--- a/src/campaign.html
+++ b/src/campaign.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="no-page__header header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
       <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -78,7 +78,7 @@
             <li class="header__item">
               <a href="./blog.html">
                 <div class="header__titles">
-                  <p class="header__titles-english">blog</p>
+                  <p class="header__titles-english">Blog</p>
                   <p class="header__titles-japanese">ブログ</p>
                 </div>
               </a>
@@ -158,6 +158,7 @@
                     <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
                   </ul>
                 </div>
               </div>
@@ -168,6 +169,7 @@
                 </li>
                 <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
                 <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+                <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
               </ul>
             </div>
           </nav>
@@ -408,7 +410,7 @@
                   <li class="site-map__sub-title"><a href="./information.html#fun-info">ファンダイビング</a></li>
                 </ul>
               </div>
-              <div class="site-map__main-title"><a href="./campaign.html">ブログ</a></div>
+              <div class="site-map__main-title"><a href="./blog.html">ブログ</a></div>
             </div>
           </div>
           <div class="site-map__sp-layout">
@@ -420,6 +422,8 @@
                   <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
+
                 </ul>
               </div>
             </div>
@@ -430,6 +434,7 @@
               </li>
               <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
               <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+              <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
             </ul>
           </div>
         </nav>
