--- a/src/information.html
+++ b/src/information.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="no-page__header header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
       <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -86,7 +86,7 @@
             <li class="header__item">
               <a href="./voice.html">
                 <div class="header__titles">
-                  <p class="header__titles-english">voice</p>
+                  <p class="header__titles-english">Voice</p>
                   <p class="header__titles-japanese">お客様の声</p>
                 </div>
               </a>
@@ -151,13 +151,14 @@
             </div>
             <div class="site-map__sp-layout">
               <div class="site-map__main">
-                <div class="site-map__main-title site-map__main-title--layout"><a href="./info.html">お客様の声</a></div>
+                <div class="site-map__main-title site-map__main-title--layout"><a href="./voice.html">お客様の声</a></div>
                 <div class="site-map__main-title"><a href="./price.html">料金一覧</a></div>
                 <div class="site-map__sub">
                   <ul class="site-map__sub-titles">
                     <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
                   </ul>
                 </div>
               </div>
@@ -168,6 +169,7 @@
                 </li>
                 <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
                 <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+                <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
               </ul>
             </div>
           </nav>
@@ -317,13 +319,15 @@
           </div>
           <div class="site-map__sp-layout">
             <div class="site-map__main">
-              <div class="site-map__main-title site-map__main-title--layout"><a href="./info.html">お客様の声</a></div>
+              <div class="site-map__main-title site-map__main-title--layout"><a href="./voice.html">お客様の声</a></div>
               <div class="site-map__main-title"><a href="./price.html">料金一覧</a></div>
               <div class="site-map__sub">
                 <ul class="site-map__sub-titles">
                   <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
+
                 </ul>
               </div>
             </div>
@@ -334,6 +338,7 @@
               </li>
               <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
               <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+              <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
             </ul>
           </div>
         </nav>
