--- a/src/blog-article.html
+++ b/src/blog-article.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="no-page__header header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
       <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -158,6 +158,7 @@
                     <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
                   </ul>
                 </div>
               </div>
@@ -168,6 +169,7 @@
                 </li>
                 <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
                 <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+                <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
               </ul>
             </div>
           </nav>
@@ -221,9 +223,8 @@
                       stroke-linejoin="round" />
                   </svg>
                 </a>
-                <a href="#" class="pager__after">
-                  <svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                <a href="#" class="pager__after"><svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18"
+                    fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path class="pager__path" d="M1 1L9 9L1 17" stroke="#408F95" stroke-linecap="round"
                       stroke-linejoin="round" />
                   </svg></a>
@@ -421,6 +422,8 @@
                   <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
+
                 </ul>
               </div>
             </div>
@@ -431,6 +434,7 @@
               </li>
               <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
               <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+              <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
             </ul>
           </div>
         </nav>
