--- a/src/contact-form-success.html
+++ b/src/contact-form-success.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="no-page__header header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
       <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -154,6 +154,7 @@
                     <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
                   </ul>
                 </div>
               </div>
@@ -164,6 +165,7 @@
                 </li>
                 <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
                 <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+                <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
               </ul>
             </div>
           </nav>
@@ -199,7 +201,7 @@
 
   </main>
   <!--footer-->
-  <footer class="footer footer-wrapper footer-wrapper--contact" id="footer">
+  <footer class="footer footer-wrapper" id="footer">
     <div class="footer__js-scroll-top" id="js-scroll-top">
       <a href="#"><img src="./assets/images/common/scroll-top.png" alt="上へ戻る矢印" /></a>
     </div>
@@ -252,6 +254,8 @@
                   <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
+
                 </ul>
               </div>
             </div>
@@ -262,6 +266,8 @@
               </li>
               <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
               <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+              <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
+              <li class="site-map__main-title"><a href="./404.html">404</a></li>
             </ul>
           </div>
         </nav>
