--- a/src/price.html
+++ b/src/price.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="no-page__header header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
       <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -153,6 +153,7 @@
                     <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
                   </ul>
                 </div>
               </div>
@@ -163,6 +164,7 @@
                 </li>
                 <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
                 <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+                <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
               </ul>
             </div>
           </nav>
@@ -185,95 +187,93 @@
     </div>
     <section class="price price-wrapper">
       <div class="price__inner inner">
-        <div class="price__menu-wrapper">
-          <div class="price__menu">
-            <div class="price__title-wrapper">
-              <h2 class="price__title">ライセンス取得</h2>
-              <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
-            </div>
-            <dl class="price__lists">
-              <div class="price__list">
-                <dt class="price__name">オープンウォーター<wbr />ダイバーコース</dt>
-                <dd class="price__yen">¥50,000</dd>
-              </div>
-              <div class="price__list">
-                <dt class="price__name">アドバンスド<wbr />オープンウォーターコース</dt>
-                <dd class="price__yen">¥60,000</dd>
-              </div>
-              <div class="price__list">
-                <dt class="price__name">レスキュー＋EFRコース</dt>
-                <dd class="price__yen">¥70,000</dd>
-              </div>
-            </dl>
+        <div class="price__menu" id="license-price">
+          <div class="price__title-wrapper">
+            <h2 class="price__title">ライセンス取得</h2>
+            <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
           </div>
-          <div class="price__menu">
-            <div class="price__title-wrapper">
-              <h2 class="price__title">体験ダイビング</h2>
-              <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+          <dl class="price__lists">
+            <div class="price__list">
+              <dt class="price__name">オープンウォーター<br class="price-pc-none">ダイバーコース</dt>
+              <dd class="price__yen">¥50,000</dd>
             </div>
-            <dl class="price__lists">
-              <div class="price__list">
-                <dt class="price__name">ビーチ体験ダイビング<wbr />(半日)</dt>
-                <dd class="price__yen">¥7,000</dd>
-              </div>
-              <div class="price__list">
-                <dt class="price__name">ビーチ体験ダイビング<wbr />(1日)</dt>
-                <dd class="price__yen">¥14,000</dd>
-              </div>
-              <div class="price__list">
-                <dt class="price__name">ボート体験ダイビング<wbr />(半日)</dt>
-                <dd class="price__yen">¥10,000</dd>
-              </div>
-              <div class="price__list">
-                <dt class="price__name">ボート体験ダイビング<wbr />(1日)</dt>
-                <dd class="price__yen">¥18,000</dd>
-              </div>
-            </dl>
-          </div>
-          <div class="price__menu">
-            <div class="price__title-wrapper">
-              <h2 class="price__title">ファンダイビング</h2>
-              <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+            <div class="price__list">
+              <dt class="price__name">アドバンスド<br class="price-pc-none">オープンウォーターコース</dt>
+              <dd class="price__yen">¥60,000</dd>
             </div>
-            <dl class="price__lists">
-              <div class="price__list">
-                <dt class="price__name">ビーチダイビング<wbr />(2ダイブ)</dt>
-                <dd class="price__yen">¥14,000</dd>
-              </div>
-              <div class="price__list">
-                <dt class="price__name">ボートダイビング<wbr />(2ダイブ)</dt>
-                <dd class="price__yen">¥18,000</dd>
-              </div>
-              <div class="price__list">
-                <dt class="price__name">スペシャルダイビング<wbr />(2ダイブ)</dt>
-                <dd class="price__yen">¥24,000</dd>
-              </div>
-              <div class="price__list">
-                <dt class="price__name">ナイトダイビング<wbr />(1ダイブ)</dt>
-                <dd class="price__yen">¥10,000</dd>
-              </div>
-            </dl>
-          </div>
-          <div class="price__menu">
-            <div class="price__title-wrapper">
-              <h2 class="price__title">スペシャルダイビング</h2>
-              <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+            <div class="price__list">
+              <dt class="price__name">レスキュー＋EFRコース</dt>
+              <dd class="price__yen">¥70,000</dd>
             </div>
-            <dl class="price__lists">
-              <div class="price__list">
-                <dt class="price__name">貸切ダイビング<wbr />(2ダイブ)</dt>
-                <dd class="price__yen">¥24,000</dd>
-              </div>
-              <div class="price__list">
-                <dt class="price__name">1日ダイビング<wbr />(3ダイブ)</dt>
-                <dd class="price__yen">¥32,000</dd>
-              </div>
-              <div class="price__list">
-                <dt class="price__name">ナイトダイビング<wbr />(2ダイブ)</dt>
-                <dd class="price__yen">¥14,000</dd>
-              </div>
-            </dl>
+          </dl>
+        </div>
+        <div class="price__menu" id="trial-price">
+          <div class="price__title-wrapper">
+            <h2 class="price__title">体験ダイビング</h2>
+            <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
           </div>
+          <dl class="price__lists">
+            <div class="price__list">
+              <dt class="price__name">ビーチ体験ダイビング<br class="price-pc-none">(半日)</dt>
+              <dd class="price__yen">¥7,000</dd>
+            </div>
+            <div class="price__list">
+              <dt class="price__name">ビーチ体験ダイビング<br class="price-pc-none">(1日)</dt>
+              <dd class="price__yen">¥14,000</dd>
+            </div>
+            <div class="price__list">
+              <dt class="price__name">ボート体験ダイビング<br class="price-pc-none">(半日)</dt>
+              <dd class="price__yen">¥10,000</dd>
+            </div>
+            <div class="price__list">
+              <dt class="price__name">ボート体験ダイビング<br class="price-pc-none">(1日)</dt>
+              <dd class="price__yen">¥18,000</dd>
+            </div>
+          </dl>
+        </div>
+        <div class="price__menu" id="fun-price">
+          <div class="price__title-wrapper">
+            <h2 class="price__title">ファンダイビング</h2>
+            <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+          </div>
+          <dl class="price__lists">
+            <div class="price__list">
+              <dt class="price__name">ビーチダイビング<br class="price-pc-none">(2ダイブ)</dt>
+              <dd class="price__yen">¥14,000</dd>
+            </div>
+            <div class="price__list">
+              <dt class="price__name">ボートダイビング<br class="price-pc-none">(2ダイブ)</dt>
+              <dd class="price__yen">¥18,000</dd>
+            </div>
+            <div class="price__list">
+              <dt class="price__name">スペシャルダイビング<br class="price-pc-none">(2ダイブ)</dt>
+              <dd class="price__yen">¥24,000</dd>
+            </div>
+            <div class="price__list">
+              <dt class="price__name">ナイトダイビング<br class="price-pc-none">(1ダイブ)</dt>
+              <dd class="price__yen">¥10,000</dd>
+            </div>
+          </dl>
+        </div>
+        <div class="price__menu" id="special-price">
+          <div class="price__title-wrapper">
+            <h2 class="price__title">スペシャルダイビング</h2>
+            <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+          </div>
+          <dl class="price__lists">
+            <div class="price__list">
+              <dt class="price__name">貸切ダイビング<br class="price-pc-none">(2ダイブ)</dt>
+              <dd class="price__yen">¥24,000</dd>
+            </div>
+            <div class="price__list">
+              <dt class="price__name">1日ダイビング<br class="price-pc-none">(3ダイブ)</dt>
+              <dd class="price__yen">¥32,000</dd>
+            </div>
+            <div class="price__list">
+              <dt class="price__name">ナイトダイビング<br class="price-pc-none">(2ダイブ)</dt>
+              <dd class="price__yen">¥14,000</dd>
+            </div>
+          </dl>
         </div>
       </div>
     </section>
@@ -369,6 +369,8 @@
                   <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
+
                 </ul>
               </div>
             </div>
@@ -379,6 +381,7 @@
               </li>
               <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
               <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+              <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
             </ul>
           </div>
         </nav>
