--- a/src/voice.html
+++ b/src/voice.html
@@ -212,8 +212,9 @@
                   <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
                 </div>
               </div>
-              <div class="voice-card__img js-color-box"><img src="./assets/images/common/voice1.png" alt="お客様女性の写真" />
-              </div>
+              <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice1.png"
+                  alt="お客様女性の写真" />
+              </figure>
             </div>
             <p class="voice-card__text">
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
@@ -231,8 +232,9 @@
                   <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
                 </div>
               </div>
-              <div class="voice-card__img js-color-box"><img src="./assets/images/common/voice2.png" alt="お客様男性の写真" />
-              </div>
+              <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice2.png"
+                  alt="お客様男性の写真" />
+              </figure>
             </div>
             <p class="voice-card__text">
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
@@ -249,8 +251,9 @@
                   <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
                 </div>
               </div>
-              <div class="voice-card__img js-color-box"><img src="./assets/images/common/voice3.png" alt="お客様男性の写真" />
-              </div>
+              <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice3.png"
+                  alt="お客様女性の写真" />
+              </figure>
             </div>
             <p class="voice-card__text">
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
@@ -267,8 +270,9 @@
                   <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
                 </div>
               </div>
-              <div class="voice-card__img js-color-box"><img src="./assets/images/common/voice4.png" alt="お客様男性の写真" />
-              </div>
+              <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice4.png"
+                  alt="お客様女性の写真" />
+              </figure>
             </div>
             <p class="voice-card__text">
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
@@ -285,8 +289,9 @@
                   <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
                 </div>
               </div>
-              <div class="voice-card__img js-color-box"><img src="./assets/images/common/voice5.png" alt="お客様男性の写真" />
-              </div>
+              <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice5.png"
+                  alt="お客様カップルの写真" />
+              </figure>
             </div>
             <p class="voice-card__text">
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
@@ -303,8 +308,9 @@
                   <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
                 </div>
               </div>
-              <div class="voice-card__img js-color-box"><img src="./assets/images/common/voice6.png" alt="お客様男性の写真" />
-              </div>
+              <figure class="voice-card__img js-color-box"><img src="./assets/images/common/voice6.png"
+                  alt="お客様女性の写真" />
+              </figure>
             </div>
             <p class="voice-card__text">
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
