--- a/src/about-us.html
+++ b/src/about-us.html
@@ -214,30 +214,36 @@
           <h2 class="section-titles__japanese">フォト</h2>
           <div class="gallery__photo-wrapper">
             <div class="gallery__photo">
-              <div class="gallery__photo-large" id="modal01"><img src="./assets/images/common/gallery1.png" alt="">
+              <div class="gallery__photo-large" id="modal01"><img src="./assets/images/common/gallery1.png"
+                  alt="海中の大きな珊瑚に赤い小さな魚が群がっている写真">
               </div>
               <div class="gallery__photo-smalls">
-                <div class="gallery__photo-small" id="modal02"><img src="./assets/images/common/gallery2.png" alt="">
+                <div class="gallery__photo-small" id="modal02"><img src="./assets/images/common/gallery2.png"
+                    alt="海の浅瀬に浮かぶ船写真">
                 </div>
-                <div class="gallery__photo-small" id="modal03"><img src="./assets/images/common/gallery3.png" alt="">
+                <div class="gallery__photo-small" id="modal03"><img src="./assets/images/common/gallery3.png"
+                    alt="白地に黒の縞模様の魚が2匹いる写真">
                 </div>
               </div>
             </div>
             <div class="gallery__photo">
               <div class="gallery__photo-smalls">
-                <div class="gallery__photo-small" id="modal04"><img src="./assets/images/common/gallery4.png" alt="">
+                <div class="gallery__photo-small" id="modal04"><img src="./assets/images/common/gallery4.png"
+                    alt="黄色い魚が1匹泳いでいる写真">
                 </div>
-                <div class="gallery__photo-small" id="modal05"><img src="./assets/images/common/gallery5.png" alt="">
+                <div class="gallery__photo-small" id="modal05"><img src="./assets/images/common/gallery5.png"
+                    alt="小さな魚の魚群が泳いでいる写真">
                 </div>
               </div>
-              <div class="gallery__photo-large" id="modal06"><img src="./assets/images/common/gallery6.png" alt="">
+              <div class="gallery__photo-large" id="modal06"><img src="./assets/images/common/gallery6.png"
+                  alt="サンゴ礁で黄色い魚が泳いでいる写真">
               </div>
             </div>
             <!--モーダル本体上３つ-->
             <div class="gallery__modal modal active" id="cont-modal01" style="display: none;">
               <div class="modal__body">
                 <div class="modal__content modal__content--large">
-                  <img src="./assets/images/common/gallery1.png" alt="">
+                  <img src="./assets/images/common/gallery1.png" alt="海中の大きな珊瑚に赤い小さな魚が群がっている写真">
                 </div>
               </div>
             </div>
@@ -245,14 +251,14 @@
           <div class="gallery__modal modal active" id="cont-modal02" style="display: none;">
             <div class="modal__body">
               <div class="modal__content">
-                <img src="./assets/images/common/gallery2.png" alt="">
+                <img src="./assets/images/common/gallery2.png" alt="海の浅瀬に浮かぶ船写真">
               </div>
             </div>
           </div>
           <div class="gallery__modal modal active" id="cont-modal03" style="display: none;">
             <div class="modal__body">
               <div class="modal__content">
-                <img src="./assets/images/common/gallery3.png" alt="">
+                <img src="./assets/images/common/gallery3.png" alt="白地に黒の縞模様の魚が2匹いる写真">
               </div>
             </div>
           </div>
@@ -260,21 +266,21 @@
           <div class="gallery__modal modal active" id="cont-modal04" style="display: none;">
             <div class="modal__body">
               <div class="modal__content">
-                <img src="./assets/images/common/gallery4.png" alt="">
+                <img src="./assets/images/common/gallery4.png" alt="黄色い魚が1匹泳いでいる写真">
               </div>
             </div>
           </div>
           <div class="gallery__modal modal active" id="cont-modal05" style="display: none;">
             <div class="modal__body">
               <div class="modal__content">
-                <img src="./assets/images/common/gallery5.png" alt="">
+                <img src="./assets/images/common/gallery5.png" alt="小さな魚の魚群が泳いでいる写真">
               </div>
             </div>
           </div>
           <div class="gallery__modal modal active" id="cont-modal06" style="display: none;">
             <div class="modal__body">
               <div class="modal__content modal__content--large">
-                <img src="./assets/images/common/gallery6.png" alt="">
+                <img src="./assets/images/common/gallery6.png" alt="サンゴ礁で黄色い魚が泳いでいる写真">
               </div>
             </div>
           </div>
