--- a/src/information.html
+++ b/src/information.html
@@ -211,7 +211,7 @@
                 泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」楽しんでいただけるよう、スタッフがサポートいたします！スキューバダイビングを楽しむためには最低限の知識とスキルが要求されます。知識やスキルと言ってもそんなに難しい事ではなく、安全に楽しむ事を目的としたものです。プロダイバーの指導のもと知識とスキルを習得しCカードを取得して、ダイバーになろう！
               </p>
             </div>
-            <div class="info__img"><img src="./assets/images/common/info1.jpg" alt="" /></div>
+            <div class="info__img"><img src="./assets/images/common/info1.jpg" alt="エメラルドの海でダイビングを楽しむ5人のお客様" /></div>
           </div>
           <div class="info__content">
             <div class="info__texts">
@@ -220,7 +220,7 @@
                 ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！
               </p>
             </div>
-            <div class="info__img"><img src="./assets/images/common/info2.png" alt="" /></div>
+            <div class="info__img"><img src="./assets/images/common/info2.png" alt="小さな魚の魚群が泳いでいる写真" /></div>
           </div>
           <div class="info__content">
             <div class="info__texts">
@@ -229,7 +229,7 @@
                 ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！
               </p>
             </div>
-            <div class="info__img"><img src="./assets/images/common/info3.jpg" alt="" /></div>
+            <div class="info__img"><img src="./assets/images/common/info3.jpg" alt="白地に黒の縞模様の魚が2匹いる写真" /></div>
           </div>
         </div>
       </div>
