--- a/src/campaign.html
+++ b/src/campaign.html
@@ -201,7 +201,7 @@
       </div>
       <div class="campaign__inner inner">
         <div class="campaign__cards">
-          <a href="" class="campaign__cards-item campaign-card" data-category="info-license">
+          <div class="campaign__cards-item campaign-card" data-category="info-license">
             <figure class="campaign-card__img">
               <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
             </figure>
@@ -222,14 +222,14 @@
               </p>
               <p class="campaign-card__date">2023/6/1-9/30</p>
               <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-              <object class="campaign-card__btn-wrapper">
+              <div class="campaign-card__btn-wrapper">
                 <a href="./contact-form.html" class="btn">Contact us
                   <span></span>
                 </a>
-              </object>
+              </div>
             </div>
-          </a>
-          <a href="" class="campaign-card" data-category="info-trial">
+          </div>
+          <div class="campaign-card" data-category="info-trial">
             <figure class="campaign-card__img">
               <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
             </figure>
@@ -250,14 +250,14 @@
               </p>
               <p class="campaign-card__date">2023/6/1-9/30</p>
               <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-              <object class="campaign-card__btn-wrapper">
+              <div class="campaign-card__btn-wrapper">
                 <a href="./contact-form.html" class="btn">Contact us
                   <span></span>
                 </a>
-              </object>
+              </div>
             </div>
-          </a>
-          <a href="" class="campaign-card" data-category="info-trial">
+          </div>
+          <div class="campaign-card" data-category="info-trial">
             <figure class="campaign-card__img">
               <img src="./assets/images/common/campaign3.png" alt="小さなクラゲの大群" />
             </figure>
@@ -278,19 +278,19 @@
               </p>
               <p class="campaign-card__date">2023/6/1-9/30</p>
               <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-              <object class="campaign-card__btn-wrapper">
+              <div class="campaign-card__btn-wrapper">
                 <a href="./contact-form.html" class="btn">Contact us
                   <span></span>
                 </a>
-              </object>
+              </div>
             </div>
-          </a>
-          <a class="campaign-card" data-category="info-fun">
+          </div>
+          <div class="campaign-card" data-category="info-fun">
             <figure class="campaign-card__img">
               <img src="./assets/images/common/campaign4.png" alt="ダイビングを楽しむ２人組" />
             </figure>
             <div class="campaign-card__body  campaign-card__body--lower">
-              <div class="campaign-card__category" category="campaign-fun">ファンダイビング</div>
+              <div class="campaign-card__category">ファンダイビング</div>
               <div class="campaign-card__title-wrapper">
                 <h3 class="campaign-card__title campaign-card__title--lower">貸切ファンダイビング</h3>
               </div>
@@ -306,13 +306,13 @@
               </p>
               <p class="campaign-card__date">2023/6/1-9/30</p>
               <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-              <object class="campaign-card__btn-wrapper">
+              <div class="campaign-card__btn-wrapper">
                 <a href="./contact-form.html" class="btn">Contact us
                   <span></span>
                 </a>
-              </object>
+              </div>
             </div>
-          </a>
+          </div>
         </div>
       </div>
       <div class="campaign__pager-wrapper pager-wrapper">
