--- a/src/contact-form.html
+++ b/src/contact-form.html
@@ -201,45 +201,41 @@
         <form action="confirm.php" method="post" name="form" onsubmit="return validate()" class="contact-form__form">
           <div class="contact-form__item">
             <label class="contact-form__label">お名前<span>必須</span></label>
-            <input type="text" name="name" value="" class="contact-form__text" placeholder="沖縄　太郎" />
+            <input type="text" name="name" class="contact-form__text" placeholder="沖縄　太郎" />
           </div>
           <div class="contact-form__item">
             <label class="contact-form__label">メールアドレス<span>必須</span></label>
-            <input type="text" name="email" value="" class="contact-form__text" placeholder="aaa000@ggmail.com" />
+            <input type="text" name="email" class="contact-form__text" placeholder="aaa000@ggmail.com" />
           </div>
           <div class="contact-form__item">
             <label class="contact-form__label">電話番号<span>必須</span></label>
-            <input type="text" name="tel" value="" class="contact-form__text" placeholder="000-0000-0000" />
-          </div>
-          <div class="contact-form__item">
-            <label class="contact-form__label">電話番号<span>必須</span></label>
-            <input type="text" name="tel" value="" class="contact-form__text" placeholder="000-0000-0000" />
+            <input type="text" name="tel" class="contact-form__text" placeholder="000-0000-0000" />
           </div>
           <div class="contact-form__item">
             <label class="contact-form__label">お問い合わせ項目<span>必須</span></label>
             <div class="contact-form__radios">
               <div class="contact-form__radio">
                 <input type="radio" name="diving" id="license-diving" class="contact-form__radio-button" />
-                <label for="license-diving" class="">ダイビング講習について</label>
+                <label for="license-diving">ダイビング講習について</label>
               </div>
               <div class="contact-form__radio">
                 <input type="radio" name="diving" id="fun-diving" class="contact-form__radio-button" />
-                <label for="fun-diving" class="">ファンダイビングについて</label>
+                <label for="fun-diving">ファンダイビングについて</label>
               </div>
               <div class="contact-form__radio">
                 <input type="radio" name="diving" id="trial-diving" class="contact-form__radio-button" />
-                <label for="trial-diving" class="">体験ダイビングについて</label>
+                <label for="trial-diving">体験ダイビングについて</label>
               </div>
               <div class="contact-form__radio">
                 <input type="radio" name="diving" id="special-diving" class="contact-form__radio-button" />
-                <label for="special-diving" class="">スペシャルダイビングについて</label>
+                <label for="special-diving">スペシャルダイビングについて</label>
               </div>
             </div>
           </div>
           <div class="contact-form__item">
             <label class="contact-form__label">キャンペーン</label>
             <div class="contact-form__contents">
-              <select name="" class="contact-form__select">
+              <select name="campaign" class="contact-form__select">
                 <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
                 <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
                 <option value="キャンペーン内容を選択" class="contact-form__content">キャンペーン内容を選択</option>
@@ -248,7 +244,7 @@
           </div>
           <div class="contact-form__item">
             <label class="contact-form__label">お問い合わせ内容<span>必須</span></label>
-            <input type="textarea" name="content" rows="5" class="contact-form__textarea"></input>
+            <textarea name="content" class="contact-form__textarea"></textarea>
           </div>
           <div class="contact-form__agreement">
             <input type="checkbox" name="agreement" id="agreement" class="contact-form__checkbox" />
@@ -263,81 +259,82 @@
         </form>
       </div>
     </section>
-    <!--footer-->
-    <footer class="footer footer-wrapper" id="footer">
-      <div class="footer__js-scroll-top" id="js-scroll-top">
-        <a href="#"><img src="./assets/images/common/scroll-top.png" alt="上へ戻る矢印" /></a>
-      </div>
-      <div class="footer__inner inner">
-        <div class="footer__icons">
-          <div class="footer__logo">
-            <a href="index.html"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
+  </main>
+  <!--footer-->
+  <footer class="footer footer-wrapper" id="footer">
+    <div class="footer__js-scroll-top" id="js-scroll-top">
+      <a href="#"><img src="./assets/images/common/scroll-top.png" alt="上へ戻る矢印" /></a>
+    </div>
+    <div class="footer__inner inner">
+      <div class="footer__icons">
+        <div class="footer__logo">
+          <a href="index.html"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
+        </div>
+        <div class="footer__sns-logos">
+          <div class="footer__sns-logo">
+            <a href="#"><img src="./assets/images/common/FacebookLogo.png" alt="facebook" /></a>
           </div>
-          <div class="footer__sns-logos">
-            <div class="footer__sns-logo">
-              <a href="#"><img src="./assets/images/common/FacebookLogo.png" alt="facebook" /></a>
-            </div>
-            <div class="footer__sns-logo">
-              <a href="#"><img src="./assets/images/common/Instagram.png" alt="instagram" /></a>
-            </div>
+          <div class="footer__sns-logo">
+            <a href="#"><img src="./assets/images/common/Instagram.png" alt="instagram" /></a>
           </div>
         </div>
-        <div class="footer__site-map-wrapper">
-          <nav class="footer__site-map site-map">
-            <div class="site-map__sp-layout">
-              <div class="site-map__content">
-                <div class="site-map__main-title site-map__main-title--layout"><a href="./campaign.html">キャンペーン</a>
-                </div>
-                <div class="site-map__sub-group">
-                  <ul class="site-map__sub-titles">
-                    <li class="site-map__sub-title"><a href="./campaign.html#license-campaign">ライセンス取得</a></li>
-                    <li class="site-map__sub-title"><a href="./campaign.html#trial-campaign">貸切体験ダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="./campaign.html#fun-campaign">ナイトダイビング</a></li>
-                  </ul>
-                </div>
-                <div class="site-map__main-title"><a href="./about-us.html">私たちについて</a></div>
+      </div>
+      <div class="footer__site-map-wrapper">
+        <nav class="footer__site-map site-map">
+          <div class="site-map__sp-layout">
+            <div class="site-map__content">
+              <div class="site-map__main-title site-map__main-title--layout"><a href="./campaign.html">キャンペーン</a>
               </div>
-              <div class="site-map__main">
-                <div class="site-map__main-title"><a href="./information.html">ダイビング情報</a></div>
-                <div class="site-map__sub-group">
-                  <ul class="site-map__sub-titles">
-                    <li class="site-map__sub-title"><a href="./information.html#license-info">ライセンス講習</a></li>
-                    <li class="site-map__sub-title"><a href="./information.html#trial-info">体験ダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="./information.html#fun-info">ファンダイビング</a></li>
-                  </ul>
-                </div>
-                <div class="site-map__main-title"><a href="./blog.html">ブログ</a></div>
+              <div class="site-map__sub-group">
+                <ul class="site-map__sub-titles">
+                  <li class="site-map__sub-title"><a href="./campaign.html#license-campaign">ライセンス取得</a></li>
+                  <li class="site-map__sub-title"><a href="./campaign.html#trial-campaign">貸切体験ダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./campaign.html#fun-campaign">ナイトダイビング</a></li>
+                </ul>
               </div>
+              <div class="site-map__main-title"><a href="./about-us.html">私たちについて</a></div>
             </div>
-            <div class="site-map__sp-layout">
-              <div class="site-map__main">
-                <div class="site-map__main-title site-map__main-title--layout"><a href="./voice.html">お客様の声</a></div>
-                <div class="site-map__main-title"><a href="./price.html">料金一覧</a></div>
-                <div class="site-map__sub">
-                  <ul class="site-map__sub-titles">
-                    <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
-                    <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
+            <div class="site-map__main">
+              <div class="site-map__main-title"><a href="./information.html">ダイビング情報</a></div>
+              <div class="site-map__sub-group">
+                <ul class="site-map__sub-titles">
+                  <li class="site-map__sub-title"><a href="./information.html#license-info">ライセンス講習</a></li>
+                  <li class="site-map__sub-title"><a href="./information.html#trial-info">体験ダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./information.html#fun-info">ファンダイビング</a></li>
+                </ul>
+              </div>
+              <div class="site-map__main-title"><a href="./blog.html">ブログ</a></div>
+            </div>
+          </div>
+          <div class="site-map__sp-layout">
+            <div class="site-map__main">
+              <div class="site-map__main-title site-map__main-title--layout"><a href="./voice.html">お客様の声</a></div>
+              <div class="site-map__main-title"><a href="./price.html">料金一覧</a></div>
+              <div class="site-map__sub">
+                <ul class="site-map__sub-titles">
+                  <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
+                  <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
 
-                  </ul>
-                </div>
+                </ul>
               </div>
-              <ul class="site-map__main">
-                <li class="site-map__main-title"><a href="./contact-FAQ.html">よくある質問</a></li>
-                <li class="site-map__main-title">
-                  <a href="./privacy.html">プライバシー<wbr />ポリシー</a>
-                </li>
-                <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
-                <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
-                <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
-              </ul>
             </div>
-          </nav>
-        </div>
+            <ul class="site-map__main">
+              <li class="site-map__main-title"><a href="./contact-FAQ.html">よくある質問</a></li>
+              <li class="site-map__main-title">
+                <a href="./privacy.html">プライバシー<wbr />ポリシー</a>
+              </li>
+              <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
+              <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
+              <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
+            </ul>
+          </div>
+        </nav>
       </div>
-      <div class="footer__copy">Copyright © 2021 - 2023 CodeUps LLC. All Rights Reserved.</div>
-    </footer>
+    </div>
+    <div class="footer__copy">Copyright © 2021 - 2023 CodeUps LLC. All Rights Reserved.</div>
+  </footer>
 </body>
 
 </html>
