--- a/src/contact-FAQ.html
+++ b/src/contact-FAQ.html
@@ -158,7 +158,7 @@
                     <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャル<wbr />ダイビング</a></li>
                   </ul>
                 </div>
               </div>
@@ -358,7 +358,7 @@
                   <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
-                  <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャル<wbr />ダイビング</a></li>
 
                 </ul>
               </div>
