--- a/src/campaign.html
+++ b/src/campaign.html
@@ -158,7 +158,7 @@
                     <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャル<wbr />ダイビング</a></li>
                   </ul>
                 </div>
               </div>
@@ -317,7 +317,13 @@
       </div>
       <div class="campaign__pager-wrapper pager-wrapper">
         <div class="campaign__pager pager">
-          <a href="#" class="pager__before"><img src="./assets/images/common/pager-before.png" alt="前のページへ" /></a>
+          <a href="#" class="pager__before">
+            <svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path class="pager__path" d="M9 1L1 9L9 17" stroke="#408F95" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+          </a>
           <div class="pager__number-wrapper">
             <a href="#" class="pager__number">1</a>
             <a href="#" class="pager__number">2</a>
@@ -326,7 +332,11 @@
             <a href="#" class="pager__number">5</a>
             <a href="#" class="pager__number">6</a>
           </div>
-          <a href="#" class="pager__after"><img src="./assets/images/common/pager-after.png" alt="次のページへ" /></a>
+          <a href="#" class="pager__after"><svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18"
+              fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path class="pager__path" d="M1 1L9 9L1 17" stroke="#408F95" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg></a>
         </div>
       </div>
     </section>
@@ -422,7 +432,7 @@
                   <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
-                  <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャル<wbr />ダイビング</a></li>
 
                 </ul>
               </div>
