--- a/src/voice.html
+++ b/src/voice.html
@@ -158,7 +158,7 @@
                     <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
-                    <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャル<wbr />ダイビング</a></li>
                   </ul>
                 </div>
               </div>
@@ -201,7 +201,7 @@
           </div>
         </div>
         <div class="voice__cards voice-cards">
-          <a href="#" class="voice-cards__item voice-card voice-card--lower">
+          <div class="voice-cards__item voice-card voice-card--lower">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -220,8 +220,8 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
             </p>
-          </a>
-          <a href="#" class="voice-cards__item voice-card voice-card--lower">
+          </div>
+          <div class="voice-cards__item voice-card voice-card--lower">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -240,7 +240,8 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
             </p>
-          </a><a href="#" class="voice-cards__item voice-card voice-card--lower">
+          </div>
+          <div class="voice-cards__item voice-card voice-card--lower">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -259,7 +260,8 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
             </p>
-          </a><a href="#" class="voice-cards__item voice-card voice-card--lower">
+          </div>
+          <div class="voice-cards__item voice-card voice-card--lower">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -278,7 +280,8 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
             </p>
-          </a><a href="#" class="voice-cards__item voice-card voice-card--lower">
+          </div>
+          <div class="voice-cards__item voice-card voice-card--lower">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -297,7 +300,8 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
             </p>
-          </a><a href="#" class="voice-cards__item voice-card voice-card--lower">
+          </div>
+          <div class="voice-cards__item voice-card voice-card--lower">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -316,7 +320,7 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
             </p>
-          </a>
+          </div>
         </div>
         <div class="voice__pager-wrapper">
           <div class="voice__pager pager">
@@ -436,7 +440,7 @@
                   <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
-                  <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャルダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャル<wbr />ダイビング</a></li>
 
                 </ul>
               </div>
